Dungeon-lore/over9000. Better translation.

--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -4582,7 +4582,7 @@
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombat": {
- 	 	 	"trans": "Você receberá Exp, ${currencyName} e saque quando você derrotar inimigos, \n                 Experimente agora!",
+ 	 	 	"trans": "Você receberá Exp, ${currencyName} e saque quando você derrotar inimigos. \n                 Experimente agora!",
  	 	 	"eng": "you will receive exp, ${currencyName} and loots when you defeat enemies,\n                give it a try now!"
  	 	},
  	 	"primaryAttack": {
@@ -4594,11 +4594,11 @@
  	 	 	"eng": "Click 'TAKE ALL' to get all the loots"
  	 	},
  	 	"dungeonQuest": {
- 	 	 	"trans": "Clique em \"Aceitar quest\" para aceitar a missão, você pode completar ou abandonar a missão a qualquer momento",
+ 	 	 	"trans": "Clique em \"Aceitar Missão\" para aceitar a missão, você pode completar ou abandonar a missão a qualquer momento",
  	 	 	"eng": "Click 'ACCEPT QUEST' to accept the quest, you may complete or abandon the quest at any time"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "Você receberá exp, Bitcoin e saque quando você derrotar inimigos, \n                 Experimente agora!",
+ 	 	 	"trans": "Você receberá exp, Bitcoin e saque quando você derrotar inimigos. \n                 Experimente agora!",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\n                give it a try now!"
  	 	}
  	},
