--- a/contribution/mobile/pt/dungeon-lore/over9000.md
+++ b/contribution/mobile/pt/dungeon-lore/over9000.md
@@ -1,5 +1,5 @@
-> Como você passa do último quarto, um pedaço impressionante de metal agarra sua curiosidade.Com algumas manobras, você consegue se aproximar disso.
+>Quando você passa pela última sala, um impressionante pedaço de metal prende sua curiosidade. Com algumas manobras, você consegue se aproximar dele.
   
-> Um analisador.Pelo menos você **ACHO** É chamado de que, de um antigo arquivo eletrônico de bibliotecas.Fora do instinto puro, você tentou colocá-lo na sua cabeça.Cabe perfeitamente, quase como se fosse feito apenas para você.Uma lente esverdeia escura singular ligada à metade da cabeça, meia situação de quadro de óculos.A lente é um pouco rachada da falta de cuidados ao longo dos anos.Você tentou ligá-lo com o botão de energia, exceto que você não conseguiu encontrar um.Você imagina que este dispositivo poderia ter feito você entender o quão forte alguém ou algo é.
+>Um analisador – pelo menos você **ACHA** que é assim que se chama – de um antigo arquivo eletrônico da biblioteca. Por puro instinto, você tenta colocá-lo na cabeça. Ele se encaixa perfeitamente, quase como se tivesse sido feito especialmente pra você. É uma lente verde-escura anexada a um suporte que parece meio bandana e meio armação de óculos. A lente está um pouco rachada pela falta de cuidado ao longo dos anos. Você tenta ligá-la com o botão de força, mas não consegue encontrar um. Você imagina que este dispositivo poderia ter feito você entender o quão forte alguém ou algo é.
   
-> Você decola o analisador e colocá-lo de volta no chão, deixando-o para alguém ponderar em que tipo de tecnologia era.
+>Você tira o analisador e o coloca de volta no chão, deixando para outra pessoa refletir sobre que tipo de tecnologia era.
