--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -1070,7 +1070,7 @@
  	 	},
  	 	"lootBox3": {
  	 	 	"name": {
- 	 	 	 	"trans": "закрытый эпический контейнер",
+ 	 	 	 	"trans": "закрытый легендарный контейнер",
  	 	 	 	"eng": "locked legendary container"
  	 	 	},
  	 	 	"description": {
