Update fr.json: Consistency
Consistency betwen armor name in caches and slot name in equiped inventory

--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -4876,11 +4876,11 @@
  	 	 	"eng": "helmet"
  	 	},
  	 	"upperArmor": {
- 	 	 	"trans": "Armure de buste",
+ 	 	 	"trans": "Plastron",
  	 	 	"eng": "upper armor"
  	 	},
  	 	"lowerArmor": {
- 	 	 	"trans": "Armure de jambes",
+ 	 	 	"trans": "Jambières",
  	 	 	"eng": "lower armor"
  	 	},
  	 	"boots": {
