--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -5126,7 +5126,7 @@
  	 	 	"eng": "of Shielding"
  	 	},
  	 	"sneaky": {
- 	 	 	"trans": "スニーキング",
+ 	 	 	"trans": "隠密の",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"evade": {
@@ -5166,11 +5166,11 @@
  	 	 	"eng": "of Damage"
  	 	},
  	 	"upgradeShield": {
- 	 	 	"trans": "シールド",
+ 	 	 	"trans": "シールドつきの",
  	 	 	"eng": "of Shield"
  	 	},
  	 	"upgradeSneaky": {
- 	 	 	"trans": "スニーキング",
+ 	 	 	"trans": "隠密の",
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"upgradeHealthRegen": {
