--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -938,7 +938,7 @@
  	 	 	 	"eng": "A black market memory shard contains highly encrypted algorithm and schematic that is crucial in the process of upgrading equipments"
  	 	 	}
  	 	},
- 	 	"*Increaser0": {
+ 	 	"upgradeChanceIncreaser0": {
  	 	 	"name": {
  	 	 	 	"trans": "Éclat d'IA de calibrage (5%)",
  	 	 	 	"eng": "Calibration AI Shard (5%)"
