--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1084,7 +1084,7 @@
  	 	 	 	"eng": "Calibration AI Shard (50%) [EVENT]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Contient des fragments d'IA avancée conçus pour aider à la mise à niveau des équipements. \r\n         Lorsqu'il est utilisé, diminue les chances d'échec de 50% pendant 5 minutes. Cela n'affecte que toi."
+ 	 	 	 	"trans": "Contient des fragments d'IA avancée conçus pour aider à la mise à niveau des équipements. \r\n         Lorsqu'il est utilisé, diminue les chances d'échec de 50% pendant 5 minutes. Cela n'affecte que toi.",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments.\r\n        When used, decreases the chance of destructive failure by 50% for 5 minutes. this only affect yourself.\r\n        You can calibrate items in your Gang Headquarters, you must join or start a gang first."
  	 	 	}
  	 	},
