--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -603,7 +603,7 @@
  	 	 	 	"eng": "Military Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Nano-machines injectables, de qulitée standard pour un usage militaire. Ils peuvent soigner pendant le combat.",
+ 	 	 	 	"trans": "Nano-machines injectables, de qualitée standard pour un usage militaire. Ils peuvent soigner pendant le combat.",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They are capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -846,7 +846,7 @@
  	 	 	 	"eng": "Tech Scrap"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Débris technologiques provenant du démantèlement d'équipemet et qui peuvent être utiliser dans la rétro-ingénierie afin d'augmenter le niveau d'impression. \r\n        Tu peut faire de la rétro ingénierie dans la zone commerciale de Shangri-La.",
+ 	 	 	 	"trans": "Débris technologiques provenant du démantèlement d'équipement et qui peuvent être utiliser dans la rétro-ingénierie afin d'augmenter le niveau d'impression. \r\n        Tu peut faire de la rétro ingénierie dans la zone commerciale de Shangri-La.",
  	 	 	 	"eng": "Technology scrap from disassembled equipment, this can be reverse engineered to gain printing xp. \r\n        You can perform reverse engineering in the Job Hub."
  	 	 	}
  	 	},
@@ -1189,7 +1189,7 @@
  	 	 	 	 	"legendaryChance",
  	 	 	 	 	"maxStack"
  	 	 	 	],
- 	 	 	 	"trans": "Un éclat contenant des softs avancés conçus pour augmenter la chance d'obtention de meilleurs objets. Gagne de chance supplémentaire d'obtention des objets légendaires (${legendaryChance}%) et épiques (${epicChance}%) lors du déverrouillage des caisses légendaires (cumumable jusqu'à ${maxStack} fois) pour ${time} minutes. Augmente aussi la chance d'obtenir une caisse mystérieuse pendant la saison de Noël. * Important: le buff ne s'applique que lorsque le processus de déverrouillage est démarré pendant que le buff est actif *.",
+ 	 	 	 	"trans": "Un éclat contenant des softs avancés conçus pour augmenter la chance d'obtention de meilleurs objets. Augmente le chances d'obtention des objets légendaires (${legendaryChance}%) et épiques (${epicChance}%) lors du déverrouillage des caisses légendaires (cumumable jusqu'à ${maxStack} fois) pour ${time} minutes. Augmente aussi la chance d'obtenir une caisse mystérieuse pendant la saison de Noël. * Important: le buff ne s'applique que lorsque le processus de déverrouillage est démarré pendant que le buff est actif *.",
         "eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for 20 minutes. Extra chance to get Mystery Container during Christmas season."
  	 	 	},
  	 	 	"descriptionv2": {
@@ -1199,7 +1199,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "Un éclat contenant des softs avancés conçus pour augmenter la chance d'obtention de meilleurs objets. Gagne de chance supplémentaire d'obtention des objets légendaires (${legendaryChance}%) et épiques (${epicChance}%) lors du déverrouillage des caisses légendaires (cumumable jusqu'à ${maxStack} fois) pour ${time} minutes. Augmente aussi la chance d'obtenir une caisse mystérieuse pendant la saison de Noël. * Important: le buff ne s'applique que lorsque le processus de déverrouillage est démarré pendant que le buff est actif *.",
+ 	 	 	 	"trans": "Un éclat contenant des softs avancés conçus pour augmenter la chance d'obtention de meilleurs objets. Augmente le chances d'obtention des objets légendaires (${legendaryChance}%) et épiques (${epicChance}%) lors du déverrouillage des caisses légendaires (cumumable jusqu'à ${maxStack} fois) pour ${time} minutes. Augmente aussi la chance d'obtenir une caisse mystérieuse pendant la saison de Noël. * Important: le buff ne s'applique que lorsque le processus de déverrouillage est démarré pendant que le buff est actif *.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (stack up to ${maxStack} times) for ${time} minutes. Extra chance to get Mystery Container during Christmas season."
  	 	 	},
  	 	 	"descriptionv3": {
@@ -1209,7 +1209,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "Un éclat contenant des softs avancés conçus pour augmenter la chance d'obtention de meilleurs objets. Gagne de chance supplémentaire d'obtention des objets légendaires (${legendaryChance}%) et épiques (${epicChance}%) lors du déverrouillage des caisses légendaires (non cumulable) pour ${time} minutes. * Important: le buff ne s'applique que lorsque le processus de déverrouillage est démarré pendant que le buff est actif *.",
+ 	 	 	 	"trans": "Un éclat contenant des softs avancés conçus pour augmenter la chance d'obtention de meilleurs objets. Augmente le chances d'obtention des objets légendaires (${legendaryChance}%) et épiques (${epicChance}%) lors du déverrouillage des caisses légendaires (non cumulable) pour ${time} minutes. * Important: le buff ne s'applique que lorsque le processus de déverrouillage est démarré pendant que le buff est actif *.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
