--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -1924,15 +1924,15 @@
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"spamBlock": {
- 	 	 	 	"trans": "N'envoi pas de message sans signification, Merci. Les spams seront en sourdine.",
+ 	 	 	 	"trans": "N'envoie pas de message sans signification, Merci. Les spams seront en sourdine.",
  	 	 	 	"eng": "Please do not send meaningless message, spams will be muted."
  	 	 	},
  	 	 	"repeatBlock": {
- 	 	 	 	"trans": "N'envoi pas le même message à plusieurs reprises, Merci. Les spams seront en sourdine.",
+ 	 	 	 	"trans": "N'envoie pas le même message à plusieurs reprises, Merci. Les spams seront en sourdine.",
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
- 	 	 	 	"trans": "N'envoi pas de messages courts, essaye une phrase plus longue à la place. Merci.",
+ 	 	 	 	"trans": "N'envoie pas de messages courts, essaye une phrase plus longue à la place. Merci.",
  	 	 	 	"eng": "Please do not send short messages, try a longer sentence instead."
  	 	 	},
  	 	 	"notAtBottom": {
@@ -2173,7 +2173,7 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Entrer le slogan de ton gang",
+ 	 	 	 	 	 	"trans": "Entre le slogan de ton gang",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
@@ -2251,7 +2251,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "Insére un objet",
- 	 	 	 	 	"eng": "Please inset an item"
+ 	 	 	 	 	"eng": "Please insert an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
