--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -506,7 +506,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "Fragment Secret de clé. Utilisé pour cracker une clé.\r\n                                Utilise le Terminal situé dans le Centre-Ville [Hub] pour cracker une clé secrète de ${segmentDisplayName}.\r\n                                Tu peut acquérir chacun des 3 fragments nécessaires dans chaque donjon (que ce soit en difficulté normale ou challenge),\r\n                                lorsque tu a acquis les 3 clés, tu peut utiliser le Terminal pour cracker (fabriquer) la clé pour accéder à la zone suivante",
+ 	 	 	 	"trans": "Fragment Secret de clé. Utilisé pour cracker une clé.\r\n                                Utilise le Terminal situé dans le Centre-Ville [Hub] pour cracker une clé secrète de ${segmentDisplayName}.\r\n                                Tu peux acquérir chacun des 3 fragments nécessaires dans chaque donjon (que ce soit en difficulté normale ou challenge),\r\n                                lorsque tu a acquis les 3 clés, tu peux utiliser le Terminal pour cracker (fabriquer) la clé pour accéder à la zone suivante",
  	 	 	 	"eng": "A secret key Fragment used to brute-force a secret key.\r\n                                Use the Terminal at city center [Hub] to brute-force a ${segmentDisplayName} secret key.\r\n                                You can acquire each of the 3 required keys in each dungeon (both normal or challenge),\r\n                                when you acquired 3 keys, you may use Terminal to brute-force (Craft) a key to the next area"
  	 	 	}
  	 	},
@@ -523,7 +523,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "Un plan contenant des informations utilisées pour l'impression 3D moléculaire d'un(e) ${typeName}, \r\n                    Tu peut créer un(e) ${typeName} avec le [Molecular 3d Printer] au [Central Hub].\r\n                    \r\n                    Astuce : Le niveau de l'objet obtenu par impression est déterminé par ton niveau en impression,\r\n                    donc imprime toujours ceux de qualité défaillante, vu qu'ils coûtent moins et sont utiles pour améiorer ton niveau en impression",
+ 	 	 	 	"trans": "Un plan contenant des informations utilisées pour l'impression 3D moléculaire d'un(e) ${typeName}, \r\n                    Tu peux créer un(e) ${typeName} avec le [Molecular 3d Printer] au [Central Hub].\r\n                    \r\n                    Astuce : Le niveau de l'objet obtenu par impression est déterminé par ton niveau en impression,\r\n                    donc imprime toujours ceux de qualité défaillante, vu qu'ils coûtent moins et sont utiles pour améiorer ton niveau en impression",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -2789,7 +2789,7 @@
  	 	 	 	"eng": "please register or login with existing account"
  	 	 	},
  	 	 	"asusDescription": {
- 	 	 	 	"trans": "Les téléphone ASUS (Zenfone, ROG) possède un bug avec l'écran n'étant pas cliquable, dans le cas, essayez d'éteindre ton écran et de le rallumer, ou met cette application à l'arrière-plan et reprend-la à nouveau. Cela devrait résoudre le problème :)",
+ 	 	 	 	"trans": "Les téléphone ASUS (Zenfone, ROG) possède un bug avec l'écran n'étant pas cliquable, dans le cas, essaye d'éteindre ton écran et de le rallumer, ou met cette application à l'arrière-plan et reprend-la à nouveau. Cela devrait résoudre le problème :)",
  	 	 	 	"eng": "ASUS phone (Zenfone, ROG) has bug with screen being not clickable, in the case, please try turning your screen off and on again, or put this app to background and resume it again. this should fix the issue :)"
  	 	 	}
  	 	},
@@ -2856,7 +2856,7 @@
  	 	 	 	 	"eng": "Who referred you?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Peut-tu rechercher et sélectionner le joueur qui t'a parrainé?",
+ 	 	 	 	 	"trans": "Peux-tu rechercher et sélectionner le joueur qui t'a parrainé?",
  	 	 	 	 	"eng": "Please search and select the player who referred you"
  	 	 	 	}
  	 	 	},
@@ -3436,7 +3436,7 @@
  	 	},
  	 	"characterNameError": {
  	 	 	"hasSpace": {
- 	 	 	 	"trans": "Le nom ne peut pas contenir d'espaces, tu peut remplacer l'espace avec \"_\"",
+ 	 	 	 	"trans": "Le nom ne peut pas contenir d'espaces, tu peux remplacer l'espace avec \"_\"",
  	 	 	 	"eng": "Name cannot contain spaces, you may replace the space with \"_\""
  	 	 	},
  	 	 	"tooShort": {
@@ -3805,7 +3805,7 @@
  	 	 	 	"verb",
  	 	 	 	"amount"
  	 	 	],
- 	 	 	"trans": "Tu peut ${verb} ${amount} fois",
+ 	 	 	"trans": "Tu peux ${verb} ${amount} fois",
  	 	 	"eng": "You can ${verb} ${amount} times"
  	 	},
  	 	"timeRequiredText": {
@@ -3973,7 +3973,7 @@
  	 	 	},
  	 	 	"goodReview": {
  	 	 	 	"title1": {
- 	 	 	 	 	"trans": "Wow ! merci beaucoup ! Je suis honoré, Peut-tu le rendre officiel en laissant l'avis sur le Play Store :) ?",
+ 	 	 	 	 	"trans": "Wow ! merci beaucoup ! Je suis honoré, Peux-tu le rendre officiel en laissant l'avis sur le Play Store :) ?",
  	 	 	 	 	"eng": "Wow, thanks so much! I'm honored, please make it official by leaving them on our store page :)"
  	 	 	 	},
  	 	 	 	"title2": {
