--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -836,7 +836,7 @@
  	 	 	 	"eng": "Military ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Pièces techniques pour des munitions de qualité militaire, couramment utilisées par le gouvernement, l'armée et les élites, peuvent être utilisées pour fabriquer des munitions si tu a le savoir-faire",
+ 	 	 	 	"trans": "Pièces techniques pour des munitions de qualité militaire, couramment utilisées par le gouvernement, l'armée et les élites, peuvent être utilisées pour fabriquer des munitions si tu as le savoir-faire",
  	 	 	 	"eng": "Military grade ammunition tech parts, commonly used by government, military and the elites,can be used to craft into usable Ammo if you have the know-how"
  	 	 	}
  	 	},
@@ -1034,7 +1034,7 @@
  	 	 	 	"eng": "Autonomous Storage Unit"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un robot militaire d'occasion conçu pour transporter de l'équipements et te suivre de manière autonome,\r\n        avec ses six pattes solides qui imitent le mouvement des araignées et une IA avancée à bord, \r\n        il peut te suivre rapidement et silencieusement tout en évitant de te gêner lors de missions que tu effectue",
+ 	 	 	 	"trans": "Un robot militaire d'occasion conçu pour transporter de l'équipement et te suivre de manière autonome,\r\n        avec ses six pattes solides qui imitent le mouvement des araignées et une IA avancée à bord, \r\n        il peut te suivre rapidement et silencieusement tout en évitant de te gêner lors de missions que tu effectue",
  	 	 	 	"eng": "An military used bot designed to carry your equipments and follows you autonomously,\r\n        with it's six strong legs that imitates the movement of spiders and a advance onboard AI, \r\n        it can follow you swiftly and quietly while it avoids get in the way of whatever mission you are performing"
  	 	 	}
  	 	},
@@ -1234,7 +1234,7 @@
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[AFK Exp Farm]\r\n        Déploye une IA dans un donjon pour toi. Cela utilisera un noyau d'IA, qui ne fait généralement qu'une seule expédition.",
+ 	 	 	 	"trans": "[AFK Exp Farm]\r\n        Déploie une IA dans un donjon pour toi. Cela utilisera un noyau d'IA, qui ne fait généralement qu'une seule expédition.",
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
@@ -1288,7 +1288,7 @@
  	 	 	 	"eng": "initiate crypto mining"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "L'exploitation minière de crypto-monnaies te permettra de gagner des bitcoins, mais en raison de l'utilisation intensive des processeurs de hachage, l'unité de traitement quantique, également appelée QPU, s'épuisera souvent.",
+ 	 	 	 	"trans": "L'exploitation minière de crypto-monnaies te permettras de gagner des bitcoins, mais en raison de l'utilisation intensive des processeurs de hachage, l'unité de traitement quantique, également appelée QPU, s'épuisera souvent.",
  	 	 	 	"eng": "Engaging in crypto mining will earn you Bitcoins, however due to the intense use of the Hash Processors, the Quantum Processing Unit, otherwise known as the QPU, will often burn out."
  	 	 	}
  	 	},
@@ -2865,7 +2865,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"name"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Tu a défini ${name} comme ton parrain",
+ 	 	 	 	 	"trans": "Tu as défini ${name} comme ton parrain",
  	 	 	 	 	"eng": "You have set ${name} as your referer"
  	 	 	 	}
  	 	 	},
@@ -3526,7 +3526,7 @@
  	 	 	 	"eng": "Damage"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Influence directement les dégâts que tu inflige",
+ 	 	 	 	"trans": "Influence directement les dégâts que tu infliges",
  	 	 	 	"eng": "Directly influences the amount of damage dealt by you"
  	 	 	}
  	 	},
@@ -3546,7 +3546,7 @@
  	 	 	 	"eng": "Crit damage"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Influence les dégâts d'attaque critique que tu inflige à l'ennemi",
+ 	 	 	 	"trans": "Influence les dégâts d'attaque critique que tu infliges à l'ennemi",
  	 	 	 	"eng": "Influence the critical attack damage you deal to the enemy"
  	 	 	}
  	 	},
@@ -3774,7 +3774,7 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Les ennemis appartenant au gang des Charognards t'inflige des dégâts accrus",
+ 	 	 	 	"trans": "Les ennemis appartenant au gang des Charognards t'infliges des dégâts accrus",
  	 	 	 	"eng": "Enemies of Scavengers gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -3784,7 +3784,7 @@
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Les ennemis appartenant au gang des Animauxs t'inflige des dégâts accrus",
+ 	 	 	 	"trans": "Les ennemis appartenant au gang des Animauxs t'infliges des dégâts accrus",
  	 	 	 	"eng": "Enemies of Animals gang deals increased damage to you"
  	 	 	}
  	 	},
@@ -3794,7 +3794,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Les ennemis appartenant au gang des Voodoo Boys t'inflige des dégâts accrus",
+ 	 	 	 	"trans": "Les ennemis appartenant au gang des Voodoo Boys t'infliges des dégâts accrus",
  	 	 	 	"eng": "Enemies of Voodoo Boys gang deals increased damage to you"
  	 	 	}
  	 	}
