--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -796,7 +796,7 @@
  	 	 	 	"eng": "AI Core"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Unité de traitement neuronal (UTN) utilisée commercialement. Livrée avec une IA à usage général. \r\n        Tu peux l'utiliser pour déployer un robot qui ratisse un donjon à ta place.",
+ 	 	 	 	"trans": "Unité de traitement neuronal (NPU) utilisée commercialement. Livrée avec une IA à usage général. \r\n        Tu peux l'utiliser pour déployer un robot qui ratisse un donjon à ta place.",
  	 	 	 	"eng": "Commercially used Neural Processing Unit (NPU). Comes with general purpose AI. \r\n        You can use this to deploy a farming bot to dungeon for you."
  	 	 	}
  	 	},
