Updated with Turkish spelling rules (edited)

--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -719,7 +719,7 @@
  	 	},
  	 	"medicalTechParts": {
  	 	 	"name": {
- 	 	 	 	"trans": "Teknolojik Tıbbi Parçalar",
+ 	 	 	 	"trans": "Tıbbi Teknolojik Parçalar",
  	 	 	 	"eng": "Medical Tech Parts"
  	 	 	},
  	 	 	"description": {
@@ -826,7 +826,7 @@
  	 	 	 	"eng": "Ammunition tech parts"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Cephane teknolojisi parçaları, Bunlar genellikle karaborsada dolaşan bulunabilir. \r\n        Nasıl yapılacağını anlayabilirsen bunları cephane yapmak için kullanabilirsin.",
+ 	 	 	 	"trans": "Cephane teknolojisi parçaları, Bunları genellikle karaborsada dolaşanlar bulunabilir. \r\n        Nasıl yapılacağını anlayabilirsen bunları cephane yapmak için kullanabilirsin.",
  	 	 	 	"eng": "Ammunition tech parts, These can be commonly found circulating the black market. \r\n        You can use these to craft ammunition if you understand how."
  	 	 	}
  	 	},
@@ -1586,7 +1586,7 @@
  	 	 	 	"eng": "Join Dungeon"
  	 	 	},
  	 	 	"killEnemy": {
- 	 	 	 	"trans": "Düşmanı Öldür",
+ 	 	 	 	"trans": "Düşman Öldür",
  	 	 	 	"eng": "Kill enemy"
  	 	 	},
  	 	 	"getMoney": {
@@ -2099,7 +2099,7 @@
  	 	 	 	"eng": "Flatlined"
  	 	 	},
  	 	 	"subTitleSmall": {
- 	 	 	 	"trans": "KRİTİK HATA: Sinir BAğlantısı Kesildi",
+ 	 	 	 	"trans": "KRİTİK HATA: Sinir Bağlantısı Kesildi",
  	 	 	 	"eng": "Critical Error: Neural Link Disconnected"
  	 	 	},
  	 	 	"progressBarTitle": {
@@ -3842,7 +3842,7 @@
  	 	},
  	 	"backpack1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Eski poşet",
+ 	 	 	 	"trans": "Eski Kese",
  	 	 	 	"eng": "Old Pouch"
  	 	 	}
  	 	},
@@ -3852,13 +3852,13 @@
  	 	},
  	 	"backpack2": {
  	 	 	"name": {
- 	 	 	 	"trans": "Bel çantası",
+ 	 	 	 	"trans": "Bel Çantası",
  	 	 	 	"eng": "Fanny Pack"
  	 	 	}
  	 	},
  	 	"backpack3": {
  	 	 	"name": {
- 	 	 	 	"trans": "Kâşifin sırt çantası",
+ 	 	 	 	"trans": "Gezginin Sırt Çantası",
  	 	 	 	"eng": "Explorer's Backpack"
  	 	 	}
  	 	},
