--- a/contribution/mobile/zh-TW/dungeon-lore/20770310b.md
+++ b/contribution/mobile/zh-TW/dungeon-lore/20770310b.md
@@ -1,6 +1,6 @@
 你從地城回來後，注意到了之前找到的記錄裝置，而且似乎已經修好了，你便坐了下來繼續看了下去
 ============================================================================================================================================================================================================
-2077/3/15
+2077/3/10
 資料已修復完畢
 
 下一秒，我們全部人都聽到了一聲非常大聲的爆炸聲。
@@ -18,7 +18,7 @@
 “管他是什麼公會，能把人炸得連腦晶片都沒了，也就說明他們不是什麼善類。”班把耗尽能量的记忆碎片给扔在一旁，对着爱德华说道。
 “你說得對，我覺得有必要向香格里拉自衛團報告一下這個事情。”愛德華看向我們：“我覺得有必要回到地面上，你們覺得呢？”
 “我沒意見，反正我的身體也開始吃不消了”
-“我也是，畢竟我也不想遇到這個叫跨界者的集團啊~”
+“我也是，畢竟我也不想遇到這個叫跨界者的集團啊。”
 “好，這樣的話我們就先回去地面吧。”說著，隊長開啟了傳送裝置，並把我們給帶回了地面
 ============================================================================================================================================================================================================
 跨界者...有時候在地城看過這樣的名字呢...還以為只是一個電池的品牌，沒想到原來是集團之類的嗎？你不禁開始思考起自己到底拿了他們多少電池。不過還沒多久，你就開始覺得昏昏欲睡了。你把記錄裝置放在桌子上，躺在沙發上，意識逐漸遠去...
