--- a/contribution/lang/pl.json
+++ b/contribution/lang/pl.json
@@ -104,7 +104,7 @@
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Aby przejść do następnego obszaru, musisz zdobyć Fragmenty Sekretnego Klucza z lochów \r\n        i użyj terminala, aby wymusić klucz dostępu do następnego obszaru.",
+ 	 	 	 	"trans": "Aby przejść do następnego obszaru, musisz zdobyć Fragmenty Sekretnego Klucza z lochów \r\n        i użyj terminala, aby złamać klucz dostępu do następnego obszaru.",
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"description": {
@@ -331,7 +331,7 @@
  	 	 	 	"eng": "Shangri-La Commercial Area"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[Praca]\r\n        Gdzie znajduje się wiele sklepów i firm. Jest to idealne miejsce do wypróbowania swoich umiejętności.",
+ 	 	 	 	"trans": "[Praca]\r\n        Tutaj znajduje się wiele sklepów i firm. Jest to idealne miejsce do wypróbowania swoich umiejętności.",
  	 	 	 	"eng": "[Job Hub]\r\n        Here are many shops and businesses reside. The perfect location to hone and refine your skills."
  	 	 	},
  	 	 	"toMainHub": {
@@ -414,7 +414,7 @@
  	 	"segment": {
  	 	 	"locked": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Zbierz wszystkie 3 unikalne Fragmenty Kluczy z Lochów w poprzedniej stacji, \r\n                    Następnie udaj się do [Terminal] w City Center [Hub], aby zdobyć klucz (Craft) wymagany do odblokowania tego obszaru.",
+ 	 	 	 	 	"trans": "Zbierz wszystkie 3 unikalne Fragmenty Kluczy z Lochów w każdej z 3 części poprzedniej stacji, \r\n                    Następnie udaj się do [Terminal] w City Center [Hub], aby zdobyć klucz (Craft) wymagany do odblokowania tego obszaru.",
  	 	 	 	 	"eng": "Gather all 3 different Key Fragments from Dungeons in each 3 zones in previous station, \r\n                    then go to [Terminal] at City Center [Hub] to brute-force (Craft) the key required to unlock this area"
  	 	 	 	}
  	 	 	},
@@ -499,7 +499,7 @@
  	 	 	 	 	"segmentDisplayName",
  	 	 	 	 	"fragmentNum"
  	 	 	 	],
- 	 	 	 	"trans": "${segmentDisplayName} Kluczowy fragment ${fragmentNum}",
+ 	 	 	 	"trans": "${segmentDisplayName} Fragment Klucza ${fragmentNum}",
  	 	 	 	"eng": "${segmentDisplayName} Key Fragment ${fragmentNum}"
  	 	 	},
  	 	 	"description": {
@@ -553,7 +553,7 @@
  	 	},
  	 	"upgradeModule": {
  	 	 	"name": {
- 	 	 	 	"trans": "Moduł uaktualnienia",
+ 	 	 	 	"trans": "Moduł ulepszania",
  	 	 	 	"eng": "upgrade module"
  	 	 	}
  	 	},
