Fix the wrong variable name

--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -963,7 +963,7 @@
  	 	 	 	"eng": "Transaction Exploit Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "すべてのサイバネティック接続されたユーザーにエクスプロイトを配信し、トランザクション・アルゴリズムを一時的に奪取し、ユーザーはボーナス${config.currency_name}を受け取ることができる。 \r\n\r\n         使用すると、オンライン中の全プレイヤーにグローバルバフを与え、20分間BitCoinの獲得量を40%増加させる。(スタック可能)",
+ 	 	 	 	"trans": "すべてのサイバネティック接続されたユーザーにエクスプロイトを配信し、トランザクション・アルゴリズムを一時的に奪取し、ユーザーはボーナス${currencyName}を受け取ることができる。 \r\n\r\n         使用すると、オンライン中の全プレイヤーにグローバルバフを与え、20分間BitCoinの獲得量を40%増加させる。(スタック可能)",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, argument their transaction algorithm temporary, allowing user to receive bonus  ${currencyName}.\r\n\r\n        When used, gives Global Buff to all players online, increase BitCoin gained by 40% for 20 minutes (stackable)\r\n        ",
  	 	 	 	"vars": [
  	 	 	 	 	"currencyName"
