--- a/contribution/lang/pl.json
+++ b/contribution/lang/pl.json
@@ -1144,7 +1144,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Ty dostajesz trochę miłości i ty dostajesz trochę miłości! każdy dostaje trochę miłości!.\r\n        Kiedy jest używany, wszyscy się kochają\r\n        Dotyczy to wszystkich graczy przez 10 minut",
+ 	 	 	 	"trans": "Ty dostajesz trochę miłości i ty dostajesz trochę miłości! Każdy dostaje trochę miłości!\r\n        Kiedy jest używany, wszyscy się kochają\r\n        Dotyczy to wszystkich graczy przez 10 minut",
  	 	 	 	"eng": "You get some love, and you get some love! everyone gets some love!.\r\n        When used everyone loves each other\r\n        This effects all players fow 10 minutes"
  	 	 	}
  	 	},
